--- a/style.css
+++ b/style.css
@@ -92,7 +92,8 @@ header div {
 }
 
 #about,
-footer {
+footer,
+#Collab {
 
     padding-top: 5vh;
     width: 100vw;
@@ -115,16 +116,18 @@ p {
     text-align: justify;
     width: 50%;
     margin: 0 auto;
-
+    display: block;
 }
 
 #about i,
-footer i {
+footer i,
+#Collab i {
     width: 100%;
     font-size: 50px;
 }
 
-#about span {
+#about span,
+#Collab span {
     padding-top: 1vh;
     display: block;
 }
